2005-04-17  Roman Kennke  <roman@kennke.org>

	* javax/swing/text/SimpleAttributeSet.java
	(addAttribute): Removed null pointer check.
	* javax/swing/text/StyleContext.java
	(NamedStyle.setResolveParent): Added null pointer check.

2005-04-17  Roman Kennke  <roman@kennke.org>

	* examples/gnu/classpath/exammples/swing/Demo.java:
	Print a short summary for available values for the property
	swing.defaultlaf.
	Set MetalLookAndFeel as default.
	Pulled out GNULookAndFeel so that it is accessible.
	* examples/gnu/classpath/exammples/swing/GNULookAndFeel.java:
	Pulled out this class from Demo.java.

2005-04-17  Roman Kennke  <roman@kennke.org>

	* javax/swing/UIManager.java:
	Make the UIManager respect the swing.defaultlaf system
	property.

2005-04-17  Roman Kennke  <roman@kennke.org>

	* javax/swing/text/SimpleAttributeSet.java
	(addAttribute): Check for null and remove key in that case.
	This fixes http://gcc.gnu.org/bugzilla/show_bug.cgi?id=21064 .

2005-04-16  Ewout Prangsma  <ewout@prangsma.net>
	
	* java/util/PriorityQueue.java:
	(PriorityQueue(Collection<? extends E>)): Added explicit cast
	for comparators.
	(PriorityQueue(PriorityQueue<? extends E>)): Likewise.
	(PriorityQueue(SortedSet<? extends E>)): Likewise.
	* java/util/TreeSet.java:
	(TreeSet(SortedSet<? extends T>)): Likewise.
		
2005-04-16  Roman Kennke  <roman@kennke.org>

	* java/awt/BorderLayout.java
	(calcSize): Check for overflow when component sizes are added.

2005-04-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/rmi/Naming.java:
	Added class documentation.
	(lookup(String)): Call parseURL and getName.
	(bind(String,java.rmi.Remote)): Likewise.
	(unbind(String)): Likewise.
	(rebind(String, java.rmi.Remote)): Likewise.
	(list(String)): Call parseURL.
	(parseURL(String)): New method to handle parsing and defaults.
	(getName(java.net.URL)): New method to handle finding the service name.
	
2005-04-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/net/URI.java: