@@ -1,3 +1,9 @@
+2005-04-19  Sven de Marothy  <sven@physto.se>
+
+	* java/util/Calendar.java:
+	(compareTo(java.util.Calendar)): Handle instability
+	in obtaining the milliseconds value.
+	
 2005-04-17  Roman Kennke  <roman@kennke.org>
 
 	* javax/swing/text/SimpleAttributeSet.java
